# DUCO-Minero

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/java/com/example/duco_miner/: MainActivity.kt  MiningService.kt
app/src/main/res/layout/: activity_main.xml
rust/miner/: Cargo.toml
rust/miner/src/: lib.rs
src/main/java/com/example/duco_miner/: MainActivity.java
