[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[lib]
name = "miner"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive", "serialize"] }
serde_json = "1.0"
sha1 = "0.10.5"
lazy_static = "1.4.0"
hex = "0.4.3"